# arrowgen

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
arrowgen/: __main__.py  arrow_converter.py  arrowgen.py  converter.py  generator.py  tuple_converter.py  utils.py  wrappers.py
arrowgen/templates/: appender.cc  appender.h  arrow.cc  arrow.h
arrowgen/tests/: README.md  simple_tester.cc  test_simple.py  test_utils.py
cpp/: CMakeLists.txt  README.md  arrow_example.cpp  arrow_example.h  arrow_example_test.cpp  learning_test.cpp  run_cpp_test.sh  setup.py  simple.proto  simple.pyx  test.cpp  test_arrow_example.cpp  test_simple.py
tests/: README.md  arrow_converter_test.py  clang_test.py  converter_test.py  data_generator.py  generator_test.py  pyarrow_learning_test.py  schema_test.py  simple.proto  simple_tester.cc  test_simple.py  test_utils.py  wrappers_test.py
tests/messages/: simple.proto
